; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/dwc2/extr_hcd.c_dwc2_free_bus_bandwidth.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/dwc2/extr_hcd.c_dwc2_free_bus_bandwidth.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_hcd = type { i32 }
%struct.urb = type { i32, i32 }
%struct.usb_bus = type { i32, i32, i32 }

@PIPE_ISOCHRONOUS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_hcd*, i32, %struct.urb*)* @dwc2_free_bus_bandwidth to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dwc2_free_bus_bandwidth(%struct.usb_hcd* %0, i32 %1, %struct.urb* %2) #0 {
  %4 = alloca %struct.usb_hcd*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.urb*, align 8
  %7 = alloca %struct.usb_bus*, align 8
  store %struct.usb_hcd* %0, %struct.usb_hcd** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.urb* %2, %struct.urb** %6, align 8
  %8 = load %struct.usb_hcd*, %struct.usb_hcd** %4, align 8
  %9 = call %struct.usb_bus* @hcd_to_bus(%struct.usb_hcd* %8)
  store %struct.usb_bus* %9, %struct.usb_bus** %7, align 8
  %10 = load %struct.urb*, %struct.urb** %6, align 8
  %11 = getelementptr inbounds %struct.urb, %struct.urb* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %24

14:                                               ; preds = %3
  %15 = load i32, i32* %5, align 4
  %16 = load %struct.urb*, %struct.urb** %6, align 8
  %17 = getelementptr inbounds %struct.urb, %struct.urb* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = sdiv i32 %15, %18
  %20 = load %struct.usb_bus*, %struct.usb_bus** %7, align 8
  %21 = getelementptr inbounds %struct.usb_bus, %struct.usb_bus* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = sub nsw i32 %22, %19
  store i32 %23, i32* %21, align 4
  br label %24

24:                                               ; preds = %14, %3
  %25 = load %struct.urb*, %struct.urb** %6, align 8
  %26 = getelementptr inbounds %struct.urb, %struct.urb* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = call i64 @usb_pipetype(i32 %27)
  %29 = load i64, i64* @PIPE_ISOCHRONOUS, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %36

31:                                               ; preds = %24
  %32 = load %struct.usb_bus*, %struct.usb_bus** %7, align 8
  %33 = getelementptr inbounds %struct.usb_bus, %struct.usb_bus* %32, i32 0, i32 2
  %34 = load i32, i32* %33, align 4
  %35 = add nsw i32 %34, -1
  store i32 %35, i32* %33, align 4
  br label %41

36:                                               ; preds = %24
  %37 = load %struct.usb_bus*, %struct.usb_bus** %7, align 8
  %38 = getelementptr inbounds %struct.usb_bus, %struct.usb_bus* %37, i32 0, i32 1
  %39 = load i32, i32* %38, align 4
  %40 = add nsw i32 %39, -1
  store i32 %40, i32* %38, align 4
  br label %41

41:                                               ; preds = %36, %31
  ret void
}

declare dso_local %struct.usb_bus* @hcd_to_bus(%struct.usb_hcd*) #1

declare dso_local i64 @usb_pipetype(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
